# stm

./: .gitattributes  .gitignore  AGENTS.md  ALGORITHM_REFERENCE.md  FC_INTEGRATION_TEST_PLAN.md  GOAL_NAV_ALGORITHM.md  HARDWARE_INTERFACE.md  IMPLEMENTATION_PLAN.md  NPU_BASELINE_EXECUTION_PLAN.md  NPU_MODEL_CONVERSION_PLAN.md  NPU_MODEL_NB_DIAGNOSIS.md  NPU_MODEL_STAGE0_FAILURE_REPORT.md  NPU_REQUIREMENTS.md  NPU_ROAD_SEG_MODEL_REQUIREMENTS.md  NPU_STM32MP25_TOOLCHAIN_REPAIR_20260711.md  NPU_ST_CLOUD_20260709_FINDINGS.md  OS_MIGRATION_PLAN.md  PARAMETER_AUDIT.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  autonomy_command.py  autonomy_context.py  autonomy_hardware.py  batch_yolo_temp.py  circular_tube_bypass_main.py  diagnose_road_follow_interval.py  direction_planner.py  framework_diagram.tex  goal_nav_main.py  goal_nav_mission.py  local_world_model.py  nb_graph.py  obstacle_classifier.py  parameter_cooper.txt  perception_pipeline.py  record_data.py  render_new_videos_360p.py  render_road_follow_videos.py  road_follow_main.py  road_follow_mission.py  (+5 more)
FlightController/: Application.py  Base.py  INSTALL_STM32MP257.md  Protocal.py  __init__.py  logging_setup.py  pyproject.toml  requirements-t265.txt  requirements.txt
FlightController/Components/: CameraSource.py  DeviceResolver.py  FCConnector.py  LDRadar_Driver.py  LDRadar_Resolver.py  MultiRadar.py  RealSense.py  __init__.py
FlightController/Solutions/: AutonomousNavigator.py  LocalPlanner.py  Navigation.py  ObstacleUtils.py  Radar_SLAM.py  RelativeGoalNavigator.py  RoadFollower.py  RoadObstacleBypassPlanner.py  (+5 more)
(+158 files in other folders)
